# tsproto

./: .gitignore  BUILD.bazel  WORKSPACE  package-lock.json  package.json  rules.bzl  tsconfig.json
lib/: BUILD.bazel  example.proto  example_pb.d.ts  example_pb.ts  usage.ts  usage_test.ts  usage_tsp.ts  usage_tsp_test.ts
